backend: Externalize CORS configuration to application properties
- Replace hardcoded CORS configuration in `SecurityConfiguration` with values from `application.yml`.
- Introduce new CORS-related properties: `allowedOrigins`, `allowedMethods`, `allowedHeaders`, and `allowCredentials`.
- Simplify constructor using `@RequiredArgsConstructor` annotation.